After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789665 - gltestsrc: Setting element to NULL segfaults
gltestsrc: Setting element to NULL segfaults
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Linux
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-30 19:17 UTC by Alex Băluț
Modified: 2017-11-06 12:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Script which segfaults when the pipeline is set to NULL (2.09 KB, text/x-python)
2017-10-30 19:17 UTC, Alex Băluț
Details
Backtrace (11.49 KB, text/plain)
2017-10-30 19:21 UTC, Alex Băluț
Details

Description Alex Băluț 2017-10-30 19:17:33 UTC
Created attachment 362574 [details]
Script which segfaults when the pipeline is set to NULL

The attached script segfaults when it should not. The role of PAUSING the "gltestsrc ! gleffects ! fakesink" pipeline in the script is to detect whether the opengl effects can be used.

I'm using an nvidia card. Thibault is using a different video card and cannot reproduce.
Comment 1 Alex Băluț 2017-10-30 19:21:10 UTC
Created attachment 362578 [details]
Backtrace
Comment 2 Matthew Waters (ystreet00) 2017-10-31 00:03:41 UTC
glDeleteVertexArrays() not in the GL thread!
Comment 3 Matthew Waters (ystreet00) 2017-11-06 12:23:01 UTC
commit c85b825bb273ce1a0de01f2d0a33ae5662d9312e
Author: Matthew Waters <matthew@centricular.com>
Date:   Mon Nov 6 23:19:15 2017 +1100

    gltestsrc: free in the GL thread on stop
    
    Calling GL functions not on the GL thread may crash in some GL
    implementations.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=789665